# Craftgame

./: .gitignore  Craftgame.sln  README.md  build.bat  build.py
Craftgame/: AABB.cpp  AABB.h  ADT.cpp  ADT.h  AdvancedModel.cpp  AdvancedModel.h  Animation.cpp  Animation.h  AnimationDialog.h  AnimationFade.h  AnimationOpen.h  AnimationRotate.h  Animatronic.cpp  Animatronic.h  AsyncQueue.h  AsyncVector.h  BinaryInputStream.h  BinaryOutputStream.h  BitBuffer.h  Block.cpp  Block.h  BlockCustomRender.h  Blocks.cpp  Blocks.h  BlurShader.cpp  BlurShader.h  BufferedStreamProvider.cpp  BufferedStreamProvider.h  ByteBuffer.cpp  ByteBuffer.h  CFont.cpp  CFont.h  CMakeLists.txt  CSInterface.cpp  CSInterface.h  Camera.cpp  Camera.h  Chat.cpp  Chat.h  Chunk.cpp  (+401 more)
Craftgame/Server Debug/: Craftgame_manifest.rc  Resource.res  vc140.idb
Craftgame/Server Debug/Craftgame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Craftgame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Craftgame/mods/mod/: package2.json  wallpaper.py  wlp-0.1.1.cgx
Craftgame/mods/mod/res/: desktop.ini
Craftgame/mods/testmod/: mod.py  package2.json
Craftgame/res/: cursor.psd
Craftgame/res/blocks/: normal.psd
Craftgame/res/font/: default.fnt
Craftgame/res/glsl/: blurF.glsl  blurV.glsl  gbufferF.glsl  gbufferV.glsl  gpostF.glsl  guiF.glsl  guiV.glsl  maskF.glsl  maskV.glsl  particle2V.glsl  particleF.glsl  particleV.glsl  shadowG.glsl  skeletonV.glsl  starF.glsl  starV.glsl  staticF.glsl  staticV.glsl
Craftgame/res/gui/: dialog.psd  inv.psd
Craftgame/res/lang/: en_US.lang  ru_RU.lang
Craftgame/res/models/: IllidanLegion.fbx  Spider.fbx  cube.cgem  cube.fbx  cube2.fbx  dimon.dae  dimon.fbx  knuckles.fbx  mainmenu.cgem  player.fbx  player2.fbx  playerg.fbx  robot.fbx  rose.fbx  rose.mtl  sphere.cgem  stanford-bunny.fbx  stick.mtl  test.fbx  torch.fbx  troll_warlord_econ.fbx  untitled.3ds  untitled.cgem  untitled.dae  yoyo.3ds  yoyo.dae  yoyo.fbx
Craftgame/res/models/hero/: pudge_model.fbx
