cmake_minimum_required(VERSION 3.8)
project(Craftgame)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        AdvancedModel.cpp
        AdvancedModel.h
        Animation.cpp
        Animation.h
        AnimationDialog.h
        AnimationFade.h
        AnimationOpen.h
        AsyncQueue.h
        AsyncVector.h
        BinaryInputStream.h
        BinaryOutputStream.h
        BitBuffer.h
        Block.cpp
        Block.h
        BlockRegistry.cpp
        BlockRegistry.h
        BlurShader.cpp
        BlurShader.h
        ByteBuffer.cpp
        ByteBuffer.h
        Camera.cpp
        Camera.h
        CFont.cpp
        CFont.h
        Chat.cpp
        Chat.h
        Chunk.cpp
        Chunk.h
        ClientOnly.h
        Clipboard.cpp
        Clipboard.h
        Command.cpp
        Command.h
        CommandKick.cpp
        CommandKick.h
        CommandList.cpp
        CommandList.h
        CommandRegistry.cpp
        CommandRegistry.h
        CommandSender.h
        CommandStop.cpp
        CommandStop.h
        Config.cpp
        Config.h
        ConsoleCommandSender.cpp
        ConsoleCommandSender.h
        CraftgameException.h
        CraftgameServer.cpp
        CraftgameServer.h
        Debugger.cpp
        Debugger.h
        def.cpp
        def.h
        Dir.cpp
        Dir.h
        Entity.cpp
        Entity.h
        EntityPlayer.cpp
        EntityPlayer.h
        EntityPlayerMP.cpp
        EntityPlayerMP.h
        EntityPlayerSP.cpp
        EntityPlayerSP.h
        EntitySkeleton.cpp
        EntitySkeleton.h
        EventBus.cpp
        EventBus.h
        Exceptions.h
        FbxStructuredModel.h
        File.cpp
        File.h
        Font.cpp
        Font.h
        FontRegistry.cpp
        FontRegistry.h
        Framebuffer.cpp
        Framebuffer.h
        GameEngine.cpp
        GameEngine.h
        GameProfile.cpp
        GameProfile.h
        GameRenderer.cpp
        GameRenderer.h
        gl.h
        global.h
        Gui.cpp
        Gui.h
        GuiButton.cpp
        GuiButton.h
        GuiCloseButton.cpp
        GuiCloseButton.h
        GuiConnectingPanel.cpp
        GuiConnectingPanel.h
        GuiContainer.cpp
        GuiContainer.h
        GuiGraph.cpp
        GuiGraph.h
        GuiLabel.cpp
        GuiLabel.h
        GuiList.cpp
        GuiList.h
        GuiScreen.cpp
        GuiScreen.h
        GuiScreenChat.cpp
        GuiScreenChat.h
        GuiScreenDialog.cpp
        GuiScreenDialog.h
        GuiScreenLoad.cpp
        GuiScreenLoad.h
        GuiScreenMainMenu.cpp
        GuiScreenMainMenu.h
        GuiScreenMessageDialog.cpp
        GuiScreenMessageDialog.h
        GuiScreenMultiplayer.cpp
        GuiScreenMultiplayer.h
        GuiScreenParent.cpp
        GuiScreenParent.h
        GuiScreenPause.cpp
        GuiScreenPause.h
        GuiScreenSettings.cpp
        GuiScreenSettings.h
        GuiSeekBar.cpp
        GuiSeekBar.h
        GuiShader.h
        GuiSwitch.cpp
        GuiSwitch.h
        GuiTabButton.cpp
        GuiTabButton.h
        GuiTextField.cpp
        GuiTextField.h
        GuiTooltip.cpp
        GuiTooltip.h
        GuiWindow.cpp
        GuiWindow.h
        GuiWindowDebug.h
        i18n.cpp
        i18n.h
        IChunkTracker.cpp
        IChunkTracker.h
        IconAtlas.cpp
        IconAtlas.h
        ImageLoader.cpp
        ImageLoader.h
        KeyBinding.cpp
        KeyBinding.h
        KeyBindingRegistry.cpp
        KeyBindingRegistry.h
        Keyboard.cpp
        Keyboard.h
        LightSource.cpp
        LightSource.h
        Lockable.cpp
        Lockable.h
        LockableData.h
        Logger.cpp
        Logger.h
        main.cpp
        MaskFramebuffer.cpp
        MaskFramebuffer.h
        Material.cpp
        Material.h
        MaterialRegistry.cpp
        MaterialRegistry.h
        Mod.cpp
        Mod.h
        Model.cpp
        Model.h
        ModelRegistry.cpp
        ModelRegistry.h
        Models.cpp
        Models.h
        ModManager.h
        NetPlayerHandler.cpp
        NetPlayerHandler.h
        OS.cpp
        OS.h
        P00Disconnected.h
        P01Ping.cpp
        P01Ping.h
        P02JoinWorld.cpp
        P02JoinWorld.h
        P03ChatMessage.cpp
        P03ChatMessage.h
        P04ServerData.cpp
        P04ServerData.h
        P05ChunkData.cpp
        P05ChunkData.h
        Packet.h
        PacketDisconnected.h
        PacketPing.cpp
        PacketPing.h
        PacketRegistry.cpp
        PacketRegistry.h
        PacketStartLogin.cpp
        PacketStartLogin.h
        Parsing.cpp
        Parsing.h
        PlayerListEntry.cpp
        PlayerListEntry.h
        PseudoRandom.cpp
        PseudoRandom.h
        pycge.cpp
        pycge.h
        Pyhook.h
        pylogger.h
        PythonMod.cpp
        PythonMod.h
        RemoteServer.cpp
        RemoteServer.h
        Res.cpp
        Res.h
        resource.h
        SecFramebuffer.cpp
        SecFramebuffer.h
        Server.h
        Shader.cpp
        Shader.h
        SkinManager.cpp
        SkinManager.h
        Socket.cpp
        Socket.h
        SoundManager.cpp
        SoundManager.h
        StaticModel.cpp
        StaticModel.h
        StaticShader.cpp
        StaticShader.h
        StructuredModel.h
        TextureManager.cpp
        TextureManager.h
        ThreadPool.cpp
        ThreadPool.h
        TileEntity.cpp
        TileEntity.h
        umnii_ptr.h
        Utils.cpp
        Utils.h
        VAO.h
        World.cpp
        World.h
        WorldGenerator.cpp
        WorldGenerator.h)

add_executable(Craftgame ${SOURCE_FILES})